Fix problem of contrast on video projector

--- a/doc/Talks/NeX-2015/css/theme/simple.css
+++ b/doc/Talks/NeX-2015/css/theme/simple.css
@@ -43,6 +43,10 @@ body {
   text-shadow: none;
   word-wrap: break-word; }
 
+.reveal .slides section[data-background="#1b1b1b"] h2{
+  color : #fff;
+}
+
 .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
   margin: 20px 0 20px 0;
   color: #333;
